<resources>
    <string name="app_name">Flogging</string>
    <string-array name="log_type">
        <item>Worked</item>
        <item>Paid leave</item>
        <item>Flex time off</item>
        <item>Public holiday</item>
        <item>Other</item>
    </string-array>

    <string-array name="log_type_filter">
        <item>All</item>
        <item>Worked</item>
        <item>Paid leave</item>
        <item>Flex time off</item>
        <item>Public holiday</item>
        <item>Other</item>
    </string-array>

    <string name="type_of_log_worked">Worked</string>
    <string name="type_of_log_paid_leave">Paid leave</string>
    <string name="type_of_log_flex_time_off">Flex time off</string>
    <string name="type_of_log_public_holiday">Public holiday</string>
    <string name="type_of_log_other">Other</string>

    <string-array name="log_type2">

    </string-array>

    <string name="title_activity_new_log">NewLog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="optional">optional</string>
    <string name="break_time_minutes">Break time(minutes)</string>
    <string name="pick_time">Pick time</string>
    <string name="_17_30">17:30</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="pick_date">Pick date</string>
    <string name="date">Date</string>
    <string name="type_of_event">Type of event</string>
    <string name="type_of_log">Type of log</string>
    <string name="delete_project">Delete project</string>
    <string name="days_missed_logging">Days missed logging</string>
    <string name="no_days_missed_logging">No days missed logging</string>
</resources>
